changed form layout to horizontal style, updated dashboard promotion pages bootstrap styles

--- a/oscar/static/less/dashboard.less
+++ b/oscar/static/less/dashboard.less
@@ -123,6 +123,7 @@ button {
   }
   .pull_out.viewed {
     background-color:rgba(0, 0, 0, 0.05);
+    margin-bottom:@baseLineHeight;
   }
   .pull_out,
   a.dd_menu {
@@ -149,6 +150,12 @@ button {
       background:#444;
       color:#fff;
     }
+  }
+}
+.controls {
+  ul {
+    margin-left:0px;
+    list-style:none;
   }
 }
 .file_upload {
@@ -186,14 +193,6 @@ button {
   .row {
     margin-left:0px;
   }
-}
-.breadcrumb {
-  padding:0px;
-  background:none;
-  border:none;
-  box-shadow:none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow:none;
 }
 .tabs.product_managment {
   margin-bottom:0px;
