--- a/oscar/templates/customer/address-delete.html
+++ b/oscar/templates/customer/address-delete.html
@@ -14,7 +14,7 @@
     <h3>Confirm address deletion</h3>
 </div>
 <h3>Confirm address deletion</h3>
-<form action="." method="post" class="form-stacked">
+<form action="." method="post" class="form-horizontal">
     {% csrf_token %}
     {% include "partials/form_fields.html" with form=form %}
     <div class="form-actions">
