--- a/oscar/templates/dashboard/reports/index.html
+++ b/oscar/templates/dashboard/reports/index.html
@@ -11,11 +11,11 @@
 
 {% block dashboard_content %}
 
-<form method="GET" action="{% url dashboard:reports-index %}">
+<form method="GET" action="{% url dashboard:reports-index %}" class="form-horizontal">
 
     {% include "partials/form_fields.html" with form=form %}
     <div class="form-actions">
-        <input type="submit" value="Generate report" class="btn" />
+        <input type="submit" value="Generate report" class="btn btn-primary" />
     </div>
 </form>
 
