--- a/oscar/static/css/dashboard.css
+++ b/oscar/static/css/dashboard.css
@@ -122,6 +122,7 @@ button {
 }
 .page-header.action .pull_out.viewed {
   background-color: rgba(0, 0, 0, 0.05);
+  margin-bottom: 18px;
 }
 .page-header.action .pull_out, .page-header.action a.dd_menu {
   display: block;
@@ -143,6 +144,10 @@ button {
 .page-header.action a.dd_menu:hover {
   background: #444;
   color: #fff;
+}
+.controls ul {
+  margin-left: 0px;
+  list-style: none;
 }
 .file_upload {
   *zoom: 1;
@@ -184,14 +189,6 @@ button {
 }
 .order_table .row {
   margin-left: 0px;
-}
-.breadcrumb {
-  padding: 0px;
-  background: none;
-  border: none;
-  box-shadow: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
 }
 .tabs.product_managment {
   margin-bottom: 0px;
