--- a/oscar/templates/customer/address-form.html
+++ b/oscar/templates/customer/address-form.html
@@ -13,7 +13,7 @@
 <div class="sub-header">
     <h3>Edit address</h3>
 </div>
-<form action="." method="post" class="form-stacked">
+<form action="." method="post" class="form-horizontal">
     {% csrf_token %}
  
     
