--- a/oscar/templates/dashboard/orders/order_detail.html
+++ b/oscar/templates/dashboard/orders/order_detail.html
@@ -130,7 +130,7 @@ Order {{ order.number }}
 <div class="sub-header">
     <h2>Items ordered</h2>
 </div>
-<form action="." method="post" class="">
+<form action="." method="post">
 {% csrf_token %}
 <table class="table table-striped table-bordered">
     <thead>
