--- a/oscar/templates/dashboard/promotions/delete.html
+++ b/oscar/templates/dashboard/promotions/delete.html
@@ -1,13 +1,21 @@
 {% extends 'dashboard/layout.html' %}
 
+{% block header %}
+<div class="page-header">
+    <h1>Delete promotion?</h1>
+</div>
+{% endblock header%}
+
 {% block dashboard_content %}
-<h1>Delete promotion?</h1>
+
 
 <form action="." method="post">
 	{% csrf_token %}
 	{{ form }}
 	<p>Delete {{ object.type }} content block <strong>{{ object.name }}</strong> - are you sure?</p>
-	<p><button type="submit" class="btn btn-danger">Delete</button>
-	or <a href="{% url dashboard:promotion-list %}">cancel</a></p>
+	<div class="form-actions">
+	    <button type="submit" class="btn btn-danger">Delete</button>
+	    or <a href="{% url dashboard:promotion-list %}">cancel</a>
+	</div>
 </form>
 {% endblock %}
