--- a/oscar/templates/dashboard/promotions/form.html
+++ b/oscar/templates/dashboard/promotions/form.html
@@ -1,30 +1,32 @@
 {% extends 'dashboard/layout.html' %}
 
-<h2>{{ heading }}</h2>
-
+<!-- <h2>{{ heading }}</h2> -->
+{% block header %}
+<div class="page-header">
+    <h1>{{ heading }}</h1>
+</div>
+{% endblock header %}
 {% block dashboard_content %}
-<h1>{{ heading }}</h1>
+
 
 {% block promotion_form %}
-<form action="." method="post" enctype="multipart/form-data">
+<form action="." method="post" enctype="multipart/form-data" class="form-horizontal">
 	{% csrf_token %}
-	<table>
-		{{ form.as_table }}
-		<tr>
-			<th></th>
-			<td><button type="submit" class="btn btn-primary">Save</button>
-				or <a href="{% url dashboard:promotion-list %}">cancel</a>
-			</td>
-		</tr>
-	</table>
+	{% include "partials/form_fields.html" with form=form %}
+	<div class="form-actions">
+        <button type="submit" class="btn btn-primary">Save</button>
+		or <a href="{% url dashboard:promotion-list %}">cancel</a>
+	</div>
 </form>
 {% endblock %}
 
 {% if promotion %}
-<h2>Pages displaying this content block</h2>
+<div class="sub-header">
+    <h2>Pages displaying this content block</h2>
+</div>
 
 {% if links %}
-<table class="table table-striped">
+<table class="table table-striped table-bordered">
 	<thead>
 		<tr>
 			<th>Page URL</th>
@@ -55,18 +57,17 @@
 {% endif %}
 
 
-<h3>Add to a page</h3>
-<form action="." method="post">
+<div class="sub-header">
+    <h3>Add to a page</h3>
+</div>
+<form action="." method="post" class="form-horizontal">
 	{% csrf_token %}
 	<input type="hidden" name="action" value="add_to_page" />
-	<table>
-		{{ link_form.as_table }}
-		<tr>
-			<th></th>
-			<td><button type="submit" class="btn btn-success">Add</button>
-			</td>
-		</tr>
-	</table>
+	{% include "partials/form_fields.html" with form=link_form %}
+    <!-- {{ link_form.as_table }} -->
+	<div class="form-actions">
+	  <button type="submit" class="btn btn-success">Add</button>
+	</div>
 </form>
 
 {% endif %}
