--- a/oscar/templates/dashboard/promotions/pagepromotion_list.html
+++ b/oscar/templates/dashboard/promotions/pagepromotion_list.html
@@ -1,18 +1,27 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
 
+{% block header %}
+<div class="page-header">
+    <h1>Content block management</h1>
+</div>
+{% endblock header %}
 
 {% block dashboard_content %}
 
-<h1>Content block management</h1>
+<div class="alert alert-info">
+    <a href="{% url dashboard:promotion-list %}" class="btn btn-primary">View all promotions</a>
+    <a href="{% url dashboard:promotion-list-by-page %}" class="btn">View promotions by page</a>
+</div>
 
-<p><a href="{% url dashboard:promotion-list %}" class="btn">View all promotions</a></p>
-<p><a href="{% url dashboard:promotion-list-by-page %}" class="btn">View promotions by page</a></p>
 
-<h2>Pages with promotions on them</h2>
+
+<div class="sub-header">
+    <h2>Pages with promotions on them</h2>
+</div>
 {% if pages %}
 
-<table class="table table-striped">
+<table class="table table-striped table-bordered">
 	<thead>
 		<tr>
 			<th>URL</th>
@@ -26,7 +35,7 @@
 			<td>{{ page.page_url }}</td>
 			<td>{{ page.freq }}</td>
 			<td>
-                <a href="{% url dashboard:promotion-list-by-url page.page_url %}" class="btn btn-info">Edit</a>
+                <a href="{% url dashboard:promotion-list-by-url page.page_url %}" class="btn btn-success">Edit</a>
 			</td>
 			<td>
 			</td>
