--- a/oscar/templates/dashboard/promotions/promotion_list.html
+++ b/oscar/templates/dashboard/promotions/promotion_list.html
@@ -2,17 +2,24 @@
 
 {% load currency_filters %}
 
+{% block header %}
+<div class="page-header">
+    <h1>Content block management</h1>
+</div>
+{% endblock header %}
 
 {% block dashboard_content %}
 
-<h1>Content block management</h1>
+<div class="alert alert-info">
+  <a href="{% url dashboard:promotion-list-by-page %}" class="btn">View promotions by page</a>
+</div>
 
-<p><a href="{% url dashboard:promotion-list-by-page %}" class="btn">View promotions by page</a></p>
-
-<h2>Content blocks</h2>
+<div class="sub-header">
+    <h2>Content blocks</h2>
+</div>
 {% if promotions %}
 
-<table class="table table-striped">
+<table class="table table-striped table-bordered">
 	<thead>
 		<tr>
 			<th>Name</th>
@@ -44,10 +51,14 @@
 
 {% endif %}
 
-<h3>Create a new content block</h3>
-<form action="{% url dashboard:promotion-create-redirect %}" method="get">
-    {{ select_form.as_p }}
-	<button type="submit" class="btn btn-primary">Go!</button>
+<div class="sub-header">
+    <h3>Create a new content block</h3>
+</div>
+<form action="{% url dashboard:promotion-create-redirect %}" method="get" class="form-horizontal">
+    {% include "partials/form_fields.html" with form=select_form %}
+	<div class="form-actions">
+	   <button type="submit" class="btn btn-primary">Create block</button>
+	</div>
 </form>
 
 {% endblock dashboard_content %}
