--- a/oscar/templates/dashboard/catalogue/product_update.html
+++ b/oscar/templates/dashboard/catalogue/product_update.html
@@ -10,7 +10,14 @@
 <form action="." method="post">
 	{% csrf_token %}
 	<table class="table">
+		<tr>
+			<th colspan="2">Product information</th>
+		</tr>
 		{{ form.as_table }}
+		<tr>
+			<th colspan="2">Stock and price information</th>
+		</tr>
+		{{ stockrecord_form.as_table }}
 		<tr>
 			<th></th>
 			<td><button class="btn" type="submit">Save</button> or 
