--- a/oscar/templates/dashboard/catalogue/product_update.html
+++ b/oscar/templates/dashboard/catalogue/product_update.html
@@ -2,7 +2,7 @@
 {% load currency_filters %}
 
 {% block header %}
-<h2>Edit product '{{ product.title }}'</h2>
+<h2>{{ title }}</h2>
 {% endblock header %}
 
 {% block dashboard_content %}
