--- a/oscar/static/less/page/head_foot.less
+++ b/oscar/static/less/page/head_foot.less
@@ -186,6 +186,10 @@
     }
     .nav-tabs.nav-stacked {
       > li {
+        span {
+          position:absolute;
+          right:5%;
+        } 
         .sub-nav {
           a:hover {
             background-color:#08C;
