--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -37,7 +37,7 @@
                                 <ul class="dropdown-menu nav-tabs nav-stacked">
                                     <li><a href="/products">All Products</a></li>
                                 {% for category in categories %}
-                                    <li><a href="{{ category.0.get_absolute_url }}">{{ category.0.name }} <span class="pull-right app-ico ico_fill_right"></span></a>
+                                    <li><a href="{{ category.0.get_absolute_url }}">{{ category.0.name }} <span class="app-ico ico_fill_right"></span></a>
                                     {% if category.1 %}
                                         <ul class="sub-nav dropdown-menu nav nav-tabs nav-stacked span3">
                                         {% for subcategory in category.1 %}
@@ -53,7 +53,7 @@
                                 <ul class="dropdown-menu nav-tabs nav-stacked">
                                     <li><a href="/products">All Products</a></li>
                                     <li>
-                                        <a href="#" >Contains a Submenu  <span class="pull-right app-ico ico_fill_right"></span></a>
+                                        <a href="#" >Contains a Submenu  <span class="app-ico ico_fill_right"></span></a>
                                         <ul class="sub-nav dropdown-menu nav nav-tabs nav-stacked span3">
                                             <li><a href="#" class="app-ico ico_outline_right"> Submenu Link</a></li>
                                             <li><a href="#" class="app-ico ico_outline_right"> Submenu Link</a></li>
