moved breadcrumbs into nav container block so it can be added or leftout of pages, more flexible

--- a/oscar/templates/catalogue/browse.html
+++ b/oscar/templates/catalogue/browse.html
@@ -5,6 +5,14 @@
 {% block header %}
 {% endblock header %}
 
+{% block container_nav %}
+    <ul class="breadcrumb">
+    	{% block breadcrumbs %}
+    	<li class="active"><a href=".">Home</a></li>
+    	{% endblock %}
+    </ul>
+{% endblock %}
+
 {% block sidebar %}
 <div class="row-fluid">
     <aside class="span3" style="position:relative;">
