--- a/oscar/templates/promotions/layout.html
+++ b/oscar/templates/promotions/layout.html
@@ -77,6 +77,8 @@
     <div class="container-fluid page">
         <div class="page_inner">
             <div class="row-fluid">
+                {% block container_nav %}
+                {% endblock %}
                 <aside class="span3">
                     {% block sidebar %}
                     {% endblock %}
