added welcome user name to top bar and removed it in mobile view

--- a/oscar/static/css/responsive.css
+++ b/oscar/static/css/responsive.css
@@ -112,6 +112,9 @@
     padding: 6px 10px;
     font-size: 18px;
   }
+  .navbar.accounts span {
+    display: none;
+  }
   .navbar.accounts .nav > li {
     float: left;
   }
