--- a/oscar/static/less/page/account.less
+++ b/oscar/static/less/page/account.less
@@ -1,5 +1,18 @@
 // OSCAR ACCOUNTS UNIQUE STYLES
 // -----------
+/* Account Navbar */
+.navbar.accounts {
+  span {
+    padding: 10px 10px 11px;
+    line-height: 19px;
+    display: block;
+    color: @grayLight;
+    em {
+      
+    }
+  }
+}
+
 /* Account Styles */
 .account_settings,
 .new_address {
