--- a/oscar/static/less/responsive.less
+++ b/oscar/static/less/responsive.less
@@ -129,6 +129,9 @@
       padding:6px 10px;
       font-size:18px;
     }
+    span {
+      display:none;
+    }
     .nav > li {
       float:left;
     }
