--- a/oscar/templates/dashboard/layout.html
+++ b/oscar/templates/dashboard/layout.html
@@ -15,6 +15,7 @@
                 <a href="{% url promotions:home %}" class="brand">Oscar</a>
                 <ul class="nav pull-right">
                     {% if user.is_authenticated %}
+                        <li><span>Welcome <em>{{ user.username }}</em></span></li>
                         <li><a href="{% url customer:summary %}" class="app-ico ico_profile">Profile</a></li>
         				<li><a href="{% url customer:logout %}" class="app-ico ico_logout">Logout</a></li>
                     {% else %}
