--- a/oscar/templates/partials/nav_accounts.html
+++ b/oscar/templates/partials/nav_accounts.html
@@ -4,11 +4,12 @@
 			<a class="brand hidden" href="{% url promotions:home %}">Oscar</a>
 			<ul class="nav pull-right">
 				{% if user.is_authenticated %}
-					{% if user.is_staff %}
-					<li><a href="{% url dashboard:index %}" class="app-ico ico_settings">Dashboard</a></li>
-					{% endif %}
-				<li><a href="{% url customer:summary %}" class="app-ico ico_profile">Profile</a></li>
+				<li><span>Welcome <em>{{ user.username }}</em></span></li>	
+				<li> <a href="{% url customer:summary %}" class="app-ico ico_profile">Profile</a></li>
 				<li><a href="{% url customer:logout %}" class="app-ico ico_logout">Logout</a></li>
+				{% if user.is_staff %}
+				<li><a href="{% url dashboard:index %}" class="app-ico ico_settings">Dashboard</a></li>
+				{% endif %}
 				{% else %}
 				<li><a href="{% url customer:login %}" class="app-ico ico_logout">Login</a></li>
 				{% endif %}
