Changes to the carousel and the typeahead

--- a/oscar/static/less/styles.less
+++ b/oscar/static/less/styles.less
@@ -58,7 +58,7 @@
 @import "bootstrap/labels.less";
 /*@import "bootstrap/progress-bars.less";*/
 /*@import "bootstrap/accordion.less";*/
-/*@import "bootstrap/carousel.less";*/
+@import "bootstrap/carousel.less";
 @import "bootstrap/hero-unit.less";
 
 // Unique Page Styles
