--- a/oscar/templates/promotions/layout.html
+++ b/oscar/templates/promotions/layout.html
@@ -74,7 +74,7 @@
         
     </header><!-- /header -->
 
-    <div class="container-fluid page">
+    <div class="container-fluid page home">
         <div class="page_inner">
             <div class="row-fluid">
                 {% block container_nav %}
