Changes to the alert message positioning

--- a/oscar/templates/checkout/checkout.html
+++ b/oscar/templates/checkout/checkout.html
@@ -67,7 +67,7 @@
     <h3>Shipping address</h3>
 </div>
 {% block shipping_address %}
-<div class="alert alert-success">
+<div class="alert fade in alert-success">
     <dl>
          <dt>Address</dt>
          <dd>
