--- a/oscar/templates/checkout/layout.html
+++ b/oscar/templates/checkout/layout.html
@@ -49,8 +49,8 @@
        
        <div class="page_inner">
             {% for message in messages %}
-        	<div class="alert alert-{{ message.tags }}">
-        		<a class="close">x</a>
+        	<div class="alert fade in alert-{{ message.tags }}">
+        		<a class="close" data-dismiss="alert">x</a>
         		{{ message }}
         	</div>
         	{% endfor %}
