--- a/oscar/static/css/styles.css
+++ b/oscar/static/css/styles.css
@@ -1620,6 +1620,13 @@ button.btn.small, input[type="submit"].btn.small {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
+  /*  Position alerts at the bottom of the browser window*/
+
+  position: absolute;
+  bottom: 0;
+  right: 2em;
+  width: 200px;
+  z-index: 9;
 }
 .alert, .alert-heading {
   color: #c09853;
