--- a/oscar/templates/promotions/layout.html
+++ b/oscar/templates/promotions/layout.html
@@ -86,7 +86,7 @@
                 <div class="span9">
                 	{% for message in messages %}
                 	<div class="alert alert-{{ message.tags }}">
-                		<a class="close">x</a>
+                		<a class="close" data-dismiss="alert">x</a>
                 		{{ message }}
                 	</div>
                 	{% endfor %}
