--- a/oscar/templates/partials/nav_accounts.html
+++ b/oscar/templates/partials/nav_accounts.html
@@ -5,7 +5,7 @@
 			<ul class="nav pull-right">
 				{% if user.is_authenticated %}
 				<li><span>Welcome <em>{{ user.username }}</em></span></li>	
-				<li> <a href="{% url customer:summary %}" class="app-ico ico_profile">Profile</a></li>
+				<li> <a href="{% url customer:summary %}" class="app-ico ico_profile">Account</a></li>
 				<li><a href="{% url customer:logout %}" class="app-ico ico_logout">Logout</a></li>
 				{% if user.is_staff %}
 				<li><a href="{% url dashboard:index %}" class="app-ico ico_settings">Dashboard</a></li>
