--- a/oscar/static/less/styles.less
+++ b/oscar/static/less/styles.less
@@ -32,7 +32,7 @@
 // Components: common
 /*@import "bootstrap/sprites.less";*/
 @import "bootstrap/dropdowns.less";
-/*@import "bootstrap/wells.less";*/
+@import "bootstrap/wells.less";
 @import "bootstrap/component-animations.less";
 @import "bootstrap/close.less";
 
