--- a/oscar/templates/dashboard/promotions/pagepromotion_list.html
+++ b/oscar/templates/dashboard/promotions/pagepromotion_list.html
@@ -9,7 +9,7 @@
 
 {% block dashboard_content %}
 
-<div class="alert alert-info">
+<div class="well well-info">
     <a href="{% url dashboard:promotion-list %}" class="btn btn-primary">View all promotions</a>
     <a href="{% url dashboard:promotion-list-by-page %}" class="btn">View promotions by page</a>
 </div>
