--- a/oscar/templates/dashboard/users/detail.html
+++ b/oscar/templates/dashboard/users/detail.html
@@ -13,7 +13,7 @@
 
 {% block dashboard_content %}
 {% with user=object %}
-<div id="user_details" class="alert alert-info">
+<div id="user_details" class="well well-info">
     <ul>
         <li>Email: {{ user.email }}</li>
         <li>First name: {{ user.first_name }}</li>
