--- a/oscar/static/css/styles.css
+++ b/oscar/static/css/styles.css
@@ -95,24 +95,6 @@ textarea {
   overflow: auto;
   vertical-align: top;
 }
-.well {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #eee;
-  border: 1px solid rgba(0, 0, 0, 0.05);
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-}
-.well blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
-}
 body {
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -1203,7 +1185,36 @@ table .span12 {
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
-/*@import "bootstrap/wells.less";*/
+.well {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #eee;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+.well blockquote {
+  border-color: #ddd;
+  border-color: rgba(0, 0, 0, 0.15);
+}
+.well-success {
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+}
+.well-danger {
+  background-color: #f2dede;
+  border-color: #eed3d7;
+}
+.well-info {
+  background-color: #d9edf7;
+  border-color: #bce8f1;
+}
 .fade {
   -webkit-transition: opacity 0.15s linear;
   -moz-transition: opacity 0.15s linear;
@@ -2878,38 +2889,6 @@ body {
 .order_summary li .total {
   background-color: transparent;
 }
-.summary {
-  /*  .quart_right();*/
-
-}
-.summary div {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #eee;
-  border: 1px solid rgba(0, 0, 0, 0.05);
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-}
-.summary div blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
-}
-.summary div h2 {
-  font-size: 18px;
-}
-.summary div h3 {
-  font-size: 14px;
-}
-.shipping_address {
-  /*  .three_quart_left();*/
-
-}
 .shipping_address h2 {
   margin-bottom: 18px;
 }
@@ -2924,13 +2903,16 @@ body {
   padding: 0px;
   list-style: none;
 }
-.choose_shipping_address .alert {
+.choose_shipping_address .well {
   position: relative;
 }
-.choose_shipping_address .alert .delete_address {
+.choose_shipping_address .well form {
+  margin-bottom: 0px;
+}
+.choose_shipping_address .well .delete_address {
   position: absolute;
-  top: 10px;
-  right: 4px;
+  top: 19px;
+  right: 19px;
 }
 .choose_shipping_address .alert-actions {
   *zoom: 1;
@@ -2948,45 +2930,6 @@ body {
 }
 .choose_shipping_address .alert-actions form input {
   width: auto;
-}
-.enter_shipping_address,
-.shipping_method,
-.order_delivered div,
-.order_payment div {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #eee;
-  border: 1px solid rgba(0, 0, 0, 0.05);
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  margin-top: 10px;
-}
-.enter_shipping_address blockquote,
-.shipping_method blockquote,
-.order_delivered div blockquote,
-.order_payment div blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
-}
-.enter_shipping_address h3,
-.shipping_method h3,
-.order_delivered div h3,
-.order_payment div h3 {
-  margin-bottom: 18px;
-}
-.order_delivered {
-  /*  .half_left();*/
-
-}
-.order_payment {
-  /*  .half_right();*/
-
 }
 .total {
   font-size: 18px;
