--- a/oscar/templates/checkout/thank_you.html
+++ b/oscar/templates/checkout/thank_you.html
@@ -18,8 +18,8 @@
 with us regarding your order.</p>
 
 <div class="row-fluid">
-    <div class="span6 order_delivered">
-        <div>
+    <div class="span6">
+        <div class="well well-success">
             <h3>Shipping</h3>
             <p>Your order will be delivered to:</p>
             {% for line in order.shipping_address.active_address_fields %}
@@ -27,8 +27,8 @@ with us regarding your order.</p>
             {% endfor %}
         </div>
     </div>
-    <div class="span6 order_payment">
-        <div>
+    <div class="span6">
+        <div class="well well-info">
             <h3>Payment</h3>
             {% for source in order.sources.all %}
             {{ source }}
