--- a/oscar/templates/dashboard/users/index.html
+++ b/oscar/templates/dashboard/users/index.html
@@ -56,7 +56,7 @@
 {% endif %}
 
 <p></p>
-<div class="alert alert-info">
+<div class="well well-info">
     <div class="control-group">
         <label class="control-label" for="inlineCheckboxes">With selected users:</label>
         <div class="controls">
