Added extra hook for an availability code

--- a/oscar/templates/dashboard/catalogue/product_update.html
+++ b/oscar/templates/dashboard/catalogue/product_update.html
@@ -26,5 +26,8 @@
 		</tr>
 	</table>
 </form>
+{% if product %}
+<p><a class="btn btn-success" href="{{ product.get_absolute_url }}">View on site</a></p>
+{% endif %}
 
 {% endblock dashboard_content %}
