repositioned alert for responsive layout and css positioned it fixed rather that absolute

--- a/oscar/static/css/responsive.css
+++ b/oscar/static/css/responsive.css
@@ -239,6 +239,13 @@
   .header {
     text-shadow: none;
   }
+  .alert {
+    /*  Position alerts at the bottom of the browser window*/
+  
+    position: static;
+    width: auto;
+    margin-bottom: 0px;
+  }
 }
 @media (max-width: 768px) {
   .container {
