--- a/oscar/static/less/bootstrap/alerts.less
+++ b/oscar/static/less/bootstrap/alerts.less
@@ -10,7 +10,7 @@
   border: 1px solid @warningBorder;
   .border-radius(4px);
 /*  Position alerts at the bottom of the browser window*/
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 2em;
   width: 200px;
