--- a/oscar/static/less/responsive.less
+++ b/oscar/static/less/responsive.less
@@ -287,7 +287,12 @@
   .header {
     text-shadow:none;
   }
-
+  .alert {
+  /*  Position alerts at the bottom of the browser window*/
+    position: static;
+    width: auto;
+    margin-bottom:0px;
+  }
 }
 
 
