--- a/oscar/static/css/styles.css
+++ b/oscar/static/css/styles.css
@@ -1633,7 +1633,7 @@ button.btn.small, input[type="submit"].btn.small {
   border-radius: 4px;
   /*  Position alerts at the bottom of the browser window*/
 
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 2em;
   width: 200px;
