--- a/oscar/static/less/dashboard.less
+++ b/oscar/static/less/dashboard.less
@@ -92,6 +92,14 @@ button {
 .page-header {
   background-color: whiteSmoke;
   padding: 20px 20px 10px;
+  h1 {
+      font-size: 24px;
+      line-height: 36px;
+  }
+}
+
+h2 {
+    font-size: 18px;
 }
 
 
