--- a/oscar/templates/dashboard/catalogue/product_list.html
+++ b/oscar/templates/dashboard/catalogue/product_list.html
@@ -2,26 +2,35 @@
 {% load currency_filters %}
 
 {% block header %}
-<h2>Catalogue management</h2>
+<div class="page-header">
+	<h1>Catalogue management</h1>
+</div>
 {% endblock header %}
 
 {% block dashboard_content %}
 
-<h2>Create new product</h2>
-<form action="{% url dashboard:catalogue-product-create %}" method="get">
-	<p>Create a new product of type
-	<select name="product_class">
-		<option> -- choose type --</option>
-		{% for product_class in product_classes %}
-		<option value="{{ product_class.id }}">{{ product_class.name }}</option>
-		{% endfor %}
-	</select>
-	<input type="submit" value="Go!" />
-	</p>
+<div class="sub-header">
+	<h2>Create new product</h2>
+</div>
+
+<form action="{% url dashboard:catalogue-product-create %}" method="get" class="form-horizontal">
+	<div class="control-group">
+		<label for="id_promotion_type">Create a new product of type</label>
+		<div class="controls">
+			<select id="id_promotion_type" name="product_class">
+				<option> -- choose type --</option>
+				{% for product_class in product_classes %}
+				<option value="{{ product_class.id }}">{{ product_class.name }}</option>
+				{% endfor %}
+			</select>
+			<input type="submit" value="Go!" class="btn-primary" />
+		</div>
+	</div>
 </form>
 
-
-<h2>Search products</h2>
+<div class="sub-header">
+	<h2>Search products</h2>
+</div>
 <form action="." method="get">
 	<table>
 		{{ form.as_table }}
@@ -38,7 +47,7 @@
 {% if products %}
 <form action="." method="post">
     {% csrf_token %}
-<table class="table table-striped">
+<table class="table table-striped table-bordered">
     <tr>
         <th>UPC</th>
         <th>Title</th>
