Reworked the order summary filtering form

--- a/oscar/templates/dashboard/orders/summary.html
+++ b/oscar/templates/dashboard/orders/summary.html
@@ -10,7 +10,7 @@
 {% block dashboard_content %}
 <form method="get" action="{% url dashboard:order-summary %}">
 <table>
-	{{ filter_form.as_table }}
+	{{ form.as_table }}
 	<tr>
 		<td>
 
