--- a/oscar/templates/customer/email-history.html
+++ b/oscar/templates/customer/email-history.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %}
 
+{% block title %}
+Email history | {{ block.super }}
+{% endblock %}
+
 {% block header %}
 <div class="page-header">
     <h2>Email history</h2>
