--- a/oscar/templates/dashboard/catalogue/product_list.html
+++ b/oscar/templates/dashboard/catalogue/product_list.html
@@ -1,6 +1,10 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
 
+{% block title %}
+Catalogue management | {{ block.super }}
+{% endblock %}
+
 {% block header %}
 <h2>Catalogue management</h2>
 {% endblock header %}
