--- a/oscar/templates/dashboard/orders/line_detail.html
+++ b/oscar/templates/dashboard/orders/line_detail.html
@@ -2,7 +2,7 @@
 {% load currency_filters %}
 
 {% block title %}
-Order {{ order.number }} - Line #{{ line.id }}
+Order {{ order.number }} - Line #{{ line.id }} | {{ block.super }}
 {% endblock %}
 
 {% block header %}
