--- a/oscar/templates/dashboard/orders/order_list.html
+++ b/oscar/templates/dashboard/orders/order_list.html
@@ -1,6 +1,9 @@
 {% extends 'dashboard/layout.html' %}
-
 {% load currency_filters %}
+
+{% block title %}
+Order management | {{ block.super }}
+{% endblock %}
 
 {% block header %}
 <div class="page-header action">
