--- a/oscar/templates/dashboard/promotions/page_detail.html
+++ b/oscar/templates/dashboard/promotions/page_detail.html
@@ -1,5 +1,8 @@
 {% extends 'dashboard/layout.html' %}
 
+{% block title %}
+Content blocks for page {{ page }} | {{ block.super }}
+{% endblock %}
 
 {% block dashboard_content %}
 
