--- a/oscar/templates/base_dashboard.html
+++ b/oscar/templates/base_dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html lang="{% block language %}en-gb{% endblock %}">
     <head>
-        <title>{% block title %}Oscar :: Dashboard{% endblock %}</title>
+        <title>{% block title %}Oscar{% endblock %}</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
         <meta name="created" content='{% now "jS M Y h:i" %}' />
         <meta name="description" content="{% block description %}{% endblock %}" />
