--- a/oscar/templates/customer/profile.html
+++ b/oscar/templates/customer/profile.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
-
 {% load currency_filters %}
+
+{% block title %}
+Profile | {{ block.super }}
+{% endblock %}
 
 {% block header %}
 <div class="page-header">
