--- a/oscar/templates/dashboard/orders/shippingaddress_form.html
+++ b/oscar/templates/dashboard/orders/shippingaddress_form.html
@@ -2,7 +2,7 @@
 {% load currency_filters %}
 
 {% block title %}
-Order {{ order.number }}
+Shipping address | Order {{ order.number }} | {{ block.super }}
 {% endblock %}
 
 {% block header %}
