--- a/oscar/templates/dashboard/promotions/promotion_list.html
+++ b/oscar/templates/dashboard/promotions/promotion_list.html
@@ -1,7 +1,9 @@
 {% extends 'dashboard/layout.html' %}
-
 {% load currency_filters %}
 
+{% block title %}
+Content blocks | {{ block.super }}
+{% endblock %}
 
 {% block dashboard_content %}
 
