--- a/oscar/templates/dashboard/reports/index.html
+++ b/oscar/templates/dashboard/reports/index.html
@@ -1,6 +1,9 @@
 {% extends 'dashboard/layout.html' %}
-
 {% load currency_filters %}
+
+{% block title %}
+Reports
+{% endblock %}
 
 {% block header %}
 <div class="page-header">
