--- a/oscar/templates/promotions/automaticproductlist.html
+++ b/oscar/templates/promotions/automaticproductlist.html
@@ -10,6 +10,12 @@
 <ul>
 {% for product in promotion.get_products %}
 <li>
+	{% with product.images.all.0 as image %}
+	<div class="image_container">
+		<a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ image.original.url }}" alt="{{ product.get_title }}"></a>
+	</div>    
+	{% endwith %}
+
     <a href="{{ product.get_absolute_url }}">{{ product.get_title }}</a><br/>
     {% if product.is_group %}
         From {{ product.min_variant_price_incl_tax|currency }}
