--- a/oscar/templates/customer/profile.html
+++ b/oscar/templates/customer/profile.html
@@ -16,6 +16,18 @@ Profile | {{ block.super }}
 <div class="sub-header">
     <h3>Account settings</h3>
 </div>
+<table class="table table-striped table-bordered">
+	<tbody>
+		<tr>
+			<th>Username</th>
+			<td>{{ request.user.username }}</td>
+		</tr>
+		<tr>
+			<th>Name</th>
+			<td>{{ request.user.get_full_name|default:'-' }}</td>
+		</tr>
+	</tbody>
+</table>
 <div class="form-actions">
     <a href="{% url customer:address-list %}" class="btn btn-primary">Manage address book</a>
     <a href="" class="btn">Change password</a>
@@ -25,6 +37,7 @@ Profile | {{ block.super }}
     <h3>Order history</h3>
 </div>
 
+{% if orders %}
 <table class="table table-striped table-bordered">
     <tr>
         <th>Order number</th>
@@ -43,9 +56,15 @@ Profile | {{ block.super }}
     </tr>
     {% endfor %}
 </table>
+
 <div class="form-actions">
     <a href="{% url customer:order-list %}" class="btn">View order history</a>
 </div>
+
+{% else %}
+<p>You haven't placed any orders yet.</p>
+
+{% endif %}
 
 <div class="sub-header">
     <h3>Email history</h3>
