--- a/oscar/static/less/page/head_foot.less
+++ b/oscar/static/less/page/head_foot.less
@@ -37,10 +37,11 @@
     float:right;
     .btn-group {
       .dropdown-menu {
-        left:initial;
+        left:auto;
         right:0px;
         width:300px;
         padding-bottom:0px;
+        max-width:none;
         li {
           width:100%;
           float:none;
