--- a/oscar/templates/partials/brand.html
+++ b/oscar/templates/partials/brand.html
@@ -6,7 +6,7 @@
         <div class="btn-group">
             <a class="btn" href="{% url basket:summary %}">View Basket</a>
             <a class="btn dropdown-toggle" data-toggle="dropdown" href="#"> <span class="caret"></span> </a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu span9">
                 <li>
                     {% include "basket/partials/basket_quick.html" %}
                 </li>
