--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -83,7 +83,10 @@
         <div class="page_inner">
         	{% block container_nav %}
         	{% endblock %}
-
+        	
+        	{% block breadcrumbs %}
+            {% endblock %}
+            
             {% block sidebar %} {% endblock %}
         
             {% block flatpage %}
