--- a/oscar/static/css/dashboard.css
+++ b/oscar/static/css/dashboard.css
@@ -50,16 +50,28 @@ button {
   display: block;
   padding: 5px 15px;
 }
-.primary-nav li ul li a:hover {
-  background: #efefef;
-}
-.primary-nav .submenu {
-  font-weight: bold;
-  color: #444;
+.primary-nav > li > a {
+  background: #ddd;
   border-top: 1px solid #bbb;
   -webkit-box-shadow: inset -1px 1px 0px 0px rgba(255, 255, 255, 0.5);
   -moz-box-shadow: inset -1px 1px 0px 0px rgba(255, 255, 255, 0.5);
   box-shadow: inset -1px 1px 0px 0px rgba(255, 255, 255, 0.5);
+  font-weight: bold;
+  color: #444;
+}
+.primary-nav li:first-child > a {
+  border-top: none;
+  -moz-border-radius-topleft: 4px;
+  -moz-border-radius-topright: 4px;
+  -moz-border-radius-bottomright: 0px;
+  -moz-border-radius-bottomleft: 0px;
+  -webkit-border-radius: 4px 4px 0px 0px;
+  border-radius: 4px 4px 0px 0px;
+}
+.primary-nav li ul li a:hover {
+  background: #efefef;
+}
+.primary-nav .submenu {
   background: url(../img/ui/icon_arrow_left.png) no-repeat 94% 50% #dddddd;
 }
 .primary-nav .viewed {
